rewrote a lot to help contain spice

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -98,7 +98,7 @@ make chips
             <select id="webtronics_vert_pins"></select>
             <select id="webtronics_hor_pins"></select>
         </fieldset>
-        <fieldset>
+        <!--fieldset>
             <legend>spice</legend>
                 <table  border="0" cellpadding="0" cellspacing="0">				
 					<tr>
@@ -109,7 +109,7 @@ make chips
 						<td><input type="checkbox" id="webtronics_invert"></td><td>invert</td>
 					</tr>
                 </table>         
-         </fieldset>
+         </fieldset-->
         <br/>
         <img id="webtronics_chip_ok" src="./buttons/ok.png">
         <img id="webtronics_chip_cancel" src="./buttons/cancel.png">
