--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -186,17 +186,16 @@ netlist display
   
 * represents missing value
 </pre>
-<img id="webtronics_netlist_text_ok" class="normal_button" src="./buttons/ok.png"> 
 <img id="webtronics_netlist_text_run" class="normal_button" src="./buttons/run.png"> 
+<img id="webtronics_netlist_text_ok" class="normal_button" src="./buttons/cancel.png"> 
 </div>
 
 <!--
 simulation display
 -->
 <div id="webtronics_scope_display" class="modal" >
-<img id="webtronics_scope_display_ok" class="normal_button" src="./buttons/ok.png"> 
-<iframe id="webtronics_scope_display_iframe">
-</iframe>
+<div id="webtronics_scope_display_div"></div>
+<img id="webtronics_scope_display_ok" class="normal_button" src="./buttons/cancel.png"> 
 </div>
 
 </div>
