added ac analysis

--- a/webtronics/gnucapjs/gnucap.html
+++ b/webtronics/gnucapjs/gnucap.html
@@ -28,8 +28,9 @@
   parsegnucap:function(t){
   console.log(t);
   var points = [];
-      try{
-        var text = t.split(/#Time.*\n/)[1];
+      try{      
+	var text = t.split(/(#Time|#Freq).*\n/);
+	text=text[text.length-1];
         var samples=text.split('\n');
         }
         catch(e){
@@ -113,7 +114,8 @@
     svgRoot.setAttribute("xmlns",svgNamespace);
     svgRoot.setAttributeNS(null, 'width',width);
     svgRoot.setAttributeNS(null, 'height',height+20);
-    svgRoot.appendChild(graph.createtext("min="+min+" max="+max+" time="+points[points.length-1][0],"black",10,svgRoot.getAttribute('height')));  
+    svgRoot.appendChild(graph.createtext("min="+min+" max="+max,"black",10,svgRoot.getAttribute('height')-12));
+    svgRoot.appendChild(graph.createtext("start="+points[0][0]+" stop="+points[points.length-1][0],"black",10,svgRoot.getAttribute('height')));  
     svgRoot.appendChild(graphG);
     return svgRoot;
   },
