models go in .lib files and subcircuits go in .mod files

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -165,7 +165,7 @@ add code text
 image display
 -->
 <div id ="webtronics_image" class="modal">
-<img id="webtronics_image_ok" class="normal_button" src="./buttons/ok.png"> 
+<img id="webtronics_image_ok" class="normal_button" src="./buttons/cancel.png">  Right click image to save 
 <br>
 <div id='webtronics_image_div' >
 <img id="webtronics_image_save" >
@@ -179,9 +179,10 @@ netlist display
 <div id="webtronics_netlist_text" class='modal'>
 <div id="webtronics_netlist_text_div" ></div>
 <pre>
-       d1 0 1 1n4148
+	d1 0 1 1n4148
         | | |   |
   part id | |   model/value 
+          | |
       leg 1 leg 2          
   
 * represents missing value
