fix netlist creator bug

--- a/webtronics/gnucapjs/gnucap.html
+++ b/webtronics/gnucapjs/gnucap.html
@@ -46,7 +46,7 @@
         var samples=text.split('\n');
         }
         catch(e){
-        //graph.printerr(t);
+	console.log("could not parse output");
         return;
         }
     var k=0;
