tinkering ,repaired number conversion error

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -126,7 +126,7 @@ add text
 <!--
 properties form
 -->
-<div id="webtronics_properties_form" class='modal'>
+<div id="webtronics_properties_div" class='modal'>
 <form name="webtronics_properties_form">
 <input id="webtronics_part_id">part id<br>
 <fieldset>
@@ -143,6 +143,7 @@ properties form
 <select id="webtronics_part_dir_model">
 		<option value="">none</option>	
 </select>
+<!--**OPEN LOCAL SPICE MODELS EXPERIMENT<input id="webtronics_part_file" type="file"/>-->
 
 </fieldset>
 <br/>
