improved graph display

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -214,7 +214,10 @@ simulation display
 <input id="webtronics_scope_output_graph" type="radio" name="scope_output" value="graph">graph
 </form>
 <br>
-<div id="webtronics_scope_display_status"></div> 
+<div id="webtronics_scope_status_bar">
+<pre id="webtronics_scope_data" ></pre> 
+<pre id="webtronics_scope_status" ></pre> 
+</div> 
 </div>
 
 </div>
