rewrote connections.js, fixed redo, added measure field to properties, improved scope

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -150,7 +150,7 @@ properties form
 </fieldset>
 <br>
 <fieldset id="webtronics_print_dir_field">
-<legend>print directive</legend>    
+<legend>measurements</legend>    
 <input id="webtronics_print_dir_value"/>
 </fieldset>
 <!--**OPEN LOCAL SPICE MODELS EXPERIMENT<input id="webtronics_part_file" type="file"/>-->
@@ -215,8 +215,8 @@ simulation display
 </form>
 <br>
 <div id="webtronics_scope_status_bar">
-<pre id="webtronics_scope_data" ></pre> 
-<pre id="webtronics_scope_status" ></pre> 
+<p id="webtronics_scope_data" ></p> 
+<p id="webtronics_scope_status" ></p> 
 </div> 
 </div>
 
