Add downloading message

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -216,7 +216,7 @@ simulation display
 <br>
 <div id="webtronics_scope_status_bar">
 <p id="webtronics_scope_data" ></p> 
-<p id="webtronics_scope_status" ></p> 
+<p id="webtronics_scope_status" >DOWNLOADING GNUCAP</p> 
 </div> 
 </div>
 
