--- a/webtronics/gnucapjs/gnucap.html
+++ b/webtronics/gnucapjs/gnucap.html
@@ -226,7 +226,7 @@
 		  
 		  //limit update rate
 	
-      
+      webtronicsstatus.innerHTML="DOWNLING GNUCAP";
       var spicenetlist= parent.webtronics.spicenetlist;
       gnucapWorker.postMessage(spicenetlist); // start the worker.
 
