--- a/webtronics/gnucapjs/gnucap.html
+++ b/webtronics/gnucapjs/gnucap.html
@@ -231,6 +231,8 @@
       gnucapWorker.postMessage(spicenetlist); // start the worker.
 
       </script>
-  <!--script async type="text/javascript" src="gnucap-ugly.js" ></script-->
+      
+  <script async type="text/javascript" src="gnucap-io.js" ></script>
+  <script async type="text/javascript" src="gnucap-ugly.js" ></script>
   </body>
 </html>
