cache gnucap-ugly.js to keep from redownloading

--- a/webtronics/schematic.html
+++ b/webtronics/schematic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="webtronics.appcache" >
+<html>
 <head>
 <title>Webtronix schematic editor.</title>
 <meta charset="UTF-8">
